--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body> 
         <h1>TESTv1.0</h1>
         <div>
-            Hello World! 
+            Hello This is ERROR's Web!
         </div>  
     </body>
 </html>
