--- a/Link 7.html
+++ b/Link 7.html
@@ -24,6 +24,14 @@
         color: #000000;
     }
 </style>
+<style>
+    div {
+        background: url(image.jpg);
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+    }
+</style>
+
 
 <body>
     <div class="off-canvas-wrap" data-offcanvas>
@@ -61,17 +69,17 @@
 
                 <h1>ERROR </h1>
 
-                <div>
+                <h2>
                     啊？你来这里做什么？？？
-                </div>
+                </h2>
                 <br>
-                <div>
-                    别急，虽然现在还真的啥都没有_(:з」∠)_
-                </div>
+                </p>
+                别急，虽然现在还真的啥都没有_(:з」∠)_
+                </p>
 
-                <br>
-                <br>
-                <br>
+
+
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                 </p>网页版本：Test-v1.0</p>
 
             </section>
