--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         background-attachment: fixed;
         position: relative;
         /* 设置相对定位 */
-        height: 168vh;
+        height: 100%;
         /* 设置容器高度 */
         z-index: 1;
         /* 元素所在层 */
