--- a/index.html
+++ b/index.html
@@ -92,8 +92,6 @@
         background-repeat: no-repeat;
         background-attachment: fixed;
         position: relative;
-        /* 设置相对定位 */
-        height: 100%;
         /* 设置容器高度 */
         z-index: 1;
         /* 元素所在层 */
@@ -225,9 +223,9 @@
             <!--左侧导航栏-->
             <button class="button-0" style="color: rgb(0,0,0);">目录</button>
             <button onclick="window.location.href='https://errorgr.github.io/ERROR-Web/LostPage404/index.html'" class="button-1">主页</button>
-            <button class="button-2">Button 2</button>
-            <button onclick="window.location.href='https://errorgr.github.io/ERROR-Web/Starry Sky/index.html'" class="button-3">星空</button>
-            <button onclick="window.location.href='https://errorgr.github.io/ERROR-Web/Link 7'" class="button-4">Button 4</button>
+            <button onclick="window.location.href='https://errorgr.github.io/ERROR-Web/LostPage404/index.html'" class="button-2">现在是空哒</button>
+            <button onclick="window.location.href='https://errorgr.github.io/ERROR-Web/Starry Sky/index.html'"  class="button-3">星环</button>
+            <button onclick="window.location.href='https://errorgr.github.io/ERROR-Web/LostPage404/index.html'" class="button-4">历史版网页</button>
 
 
         </ul>
@@ -275,7 +273,7 @@
     <a style="color:#FFFFFF;" href="https://www.pixiv.net">别点！我知道你进不去（手动滑稽）</a>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <pre style="color:#FFFFFF;">
-                                网页版本：Test-v2.1
+                                网页版本：Test-v2.2
                   （找找v1.0在哪里？∠( ᐛ 」∠)_看戏）
                 </pre>
     </div>
