--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     }
 
     .button-0:hover {
-        background-color: #4CAF50;
+        background-color: #0000000;
         color: #FFFFFF;
     }
 
@@ -151,42 +151,42 @@
     .button-1 {
         width: 200px;
         height: 50px;
-        background-color: #727272;
+        background-color: #D2F99180;
         position: absolute;
         top: 50px;
         left: 0px;
     }
 
     .button-1:hover {
-        background-color: #A9A9A920;
+        background-color: #E8F8BD90;
     }
 
     /* 样式2 */
     .button-2 {
         width: 200px;
         height: 50px;
-        background-color: #727272;
+        background-color: #A1FBFB80;
         position: absolute;
         top: 100px;
         left: 0px;
     }
 
     .button-2:hover {
-        background-color: #1976d2;
+        background-color: #E8F8BD90;
     }
 
     /* 样式3 */
     .button-3 {
         width: 200px;
         height: 50px;
-        background-color: #727272;
+        background-color: #D1A9F980;
         position: absolute;
         top: 150px;
         left: 0px;
     }
 
     .button-3:hover {
-        background-color: #4CAF50;
+        background-color: #E8F8BD90;
         color: white;
     }
 
@@ -194,14 +194,14 @@
     .button-4 {
         width: 200px;
         height: 50px;
-        background-color: #727272;
+        background-color: #F8A8D090;
         position: absolute;
         top: 200px;
         left: 0px;
     }
 
     .button-4:hover {
-        background-color: #4CAF50;
+        background-color: #F8A8D090;
         color: white;
     }
 </style>
@@ -224,7 +224,7 @@
             <button class="button-0" style="color: rgb(0,0,0);">目录</button>
             <button onclick="window.location.href='https://errorgr.github.io/ERROR-Web/LostPage404/index.html'" class="button-1">主页</button>
             <button onclick="window.location.href='https://errorgr.github.io/ERROR-Web/LostPage404/index.html'" class="button-2">现在是空哒</button>
-            <button onclick="window.location.href='https://errorgr.github.io/ERROR-Web/Starry Sky/index.html'"  class="button-3">星环</button>
+            <button onclick="window.location.href='https://errorgr.github.io/ERROR-Web/Starry Sky/index.html'" class="button-3">星环</button>
             <button onclick="window.location.href='https://errorgr.github.io/ERROR-Web/LostPage404/index.html'" class="button-4">历史版网页</button>
 
 
@@ -249,6 +249,7 @@
         <div style="color:#FFFFFF;">
             ʕ ᵔᴥᵔ ʔ
         </div>
+        <br><br><br><br><br><br><br><br>
         <div style="color:#FFFFFF;">
             别急
         </div>
@@ -260,7 +261,7 @@
         </div>
         <!-- </p>放一些有用的网站吧：</p>-->
     </div>
-    <br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br>
     <div style="color:#FFFFFF;">
         放一些有用的网站吧：
     </div>
@@ -271,11 +272,13 @@
     <br>
 
     <a style="color:#FFFFFF;" href="https://www.pixiv.net">别点！我知道你进不去（手动滑稽）</a>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br>
+    <a style="color:#FFFFFF;">往下再翻翻？(*^ω^*)</a>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <pre style="color:#FFFFFF;">
-                                网页版本：Test-v2.2
+                                网页版本：Test-v2.3
                   （找找v1.0在哪里？∠( ᐛ 」∠)_看戏）
-                </pre>
+       PS：此版本以及之前的版本中“历史网页”功能暂未开放</pre>
     </div>
     <!--导航栏监听等-->
     <script>
