--- a/ChatGPT/index.html
+++ b/ChatGPT/index.html
@@ -1,64 +1,15 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-    <title>模拟聊天机器人</title>
-    <style>
-        .chat-message {
-            margin: 10px;
-            padding: 10px;
-            border-radius: 10px;
-        }
-
-        .user-message {
-            background-color: #EDEDED;
-        }
-
-        .robot-message {
-            background-color: #78C2AD;
-            color: white;
-        }
-    </style>
+	<title>打开百度网站</title>
+	<script type="text/javascript">
+		window.onload = function() {
+			var baiduWindow = window.open('https://www.baidu.com', 'Baidu', 'width=800, height=600');
+			baiduWindow.focus();
+		};
+	</script>
 </head>
 <body>
-    <h1>聊天机器人</h1>
-    <iframe src="https://chatbot.theb.ai/#/chat/1002" width="600" height="800" name="chatbot"></iframe>
-
-    <h1>模拟用户输入</h1>
-    <input type="text" id="userInput" placeholder="请输入要发送的消息">
-    <button id="sendButton">发送</button>
-    <div id="chatHistory"></div>
-
-    <script>
-        // 获取聊天机器人页面的文本框元素以及发送按钮元素
-        var chatInput = window.parent.document.getElementById("userInput");
-        var sendButton = window.parent.document.getElementById("sendButton");
-
-        // 监听发送按钮的点击事件
-        sendButton.addEventListener("click", function() {
-            // 获取用户在你的网页上输入的消息
-            var userInput = chatInput.value;
-
-            // 将消息设置为聊天机器人界面的输入框中的值
-            var robotInput = window.frames["chatbot"].document.getElementById("userInput");
-            robotInput.value = userInput;
-
-            // 模拟用户按下回车键，并发送消息
-            var event = new Event("keydown");
-            event.keyCode = 13; // 使用 Enter 键的键码（keyCode）模拟回车键
-            robotInput.dispatchEvent(event);
-
-            // 等待一段时间，以便聊天机器人有时间返回消息
-            setTimeout(function() {
-                // 获取聊天机器人返回的消息
-                var chatHistory = window.frames["chatbot"].document.getElementById("chatHistory");
-                var robotOutput = chatHistory.lastElementChild.innerHTML;
-
-                // 在你的网页上显示聊天机器人返回的消息
-                var historyDiv = window.parent.document.getElementById("chatHistory");
-                historyDiv.innerHTML += '<div class="chat-message robot-message">' + robotOutput + '</div>';
-            }, 1000);
-        });
-    </script>
+	<p>正在加载百度网站，请稍候...</p>
 </body>
 </html>
