--- a/ChatGPT/index.html
+++ b/ChatGPT/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>打开百度网站</title>
-	<script type="text/javascript">
-		window.onload = function() {
-			var baiduWindow = window.open('https://www.baidu.com', 'Baidu', 'width=800, height=600');
-			baiduWindow.focus();
-		};
-	</script>
 </head>
 <body>
-	<p>正在加载百度网站，请稍候...</p>
+	<p>The lucky poem is: <span id="random-poem"></span></p>
+
+  <script src="https://errorgr.github.io/ERROR-Web/Random Poem/poem-library.js"></script>
+  <script>
+    const randomPoem = getRandomPoem();
+    document.getElementById('random-poem').innerText = randomPoem;
+  </script>
 </body>
 </html>
