--- a/ToolBox/index.html
+++ b/ToolBox/index.html
@@ -241,7 +241,11 @@
             <button onclick="window.location.href='https://errorgr.github.io/ERROR-Web/Advices'" class="button-advice">建议/反馈</button>
         </ul>
     </div>
-
+    <style>
+        #sidebar {
+            z-index: 99;
+        }
+    </style>
 
 
 
