--- a/ChatGPT/index.html
+++ b/ChatGPT/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-</head>
-<body>
-	<p>The lucky poem is: <span id="random-poem"></span></p>
-
-  <script src="https://errorgr.github.io/ERROR-Web/Random Poem/poem-library.js"></script>
-  <script>
-    const randomPoem = getRandomPoem();
-    document.getElementById('random-poem').innerText = randomPoem;
-  </script>
-</body>
+  <head>
+    <meta http-equiv="refresh" content="0; URL=https://chatbot.theb.ai/">
+  </head>
+  <body>
+    <p>正在跳转...</p>
+  </body>
 </html>
