--- a/ToolBox/index.html
+++ b/ToolBox/index.html
@@ -378,10 +378,10 @@
             <div class="content-50">
                 <div class="text-50">
                     <div>小哈VPN2.2</div>
-                    <div>VPN科学上网工具----------------------------------------------------------------------------------</div>
+                    <div>VPN科学上网工具-----------------------------------------------------------------提取码：3miy</div>
                 </div>
                 <div class="button-50">
-                    <button onclick="window.location.href='https://errorgr.github.io/ERROR-Web/LostPage404'" class="rounded">下载</button>
+                    <button onclick="window.location.href='https://wwp.lanzoup.com/iNQJF0zuoz6b'" class="rounded">下载</button>
                 </div>
             </div>
         </div>
@@ -436,6 +436,69 @@
 
 
 
+<div class="container-51">
+            <div class="image-51">
+                <img src="https://errorgr.github.io/ERROR-Web/ToolBox/APK-icon/Super VPN.jpg" alt="Image">
+            </div>
+            <div class="content-51">
+                <div class="text-51">
+                    <div>SuperVPN</div>
+                    <div>VPN科学上网工具-----------------------------------------------------------------提取码：5xnb</div>
+                </div>
+                <div class="button-51">
+                    <button onclick="window.location.href='https://wwyg.lanzoup.com/ihEvG0zvu7ih'" class="rounded">下载</button>
+                </div>
+            </div>
+        </div>
+
+        <style>
+            .container-51 {
+                display: flex;
+                align-items: center;
+                border-radius: 10px;
+                border: 1px solid #ccc;
+                border-width: 2px;
+                position: absolute;
+                top: 300px;
+                left: 10px;
+                right: 10px;
+                color: black;
+            }
+
+            .image-51>img {
+                max-width: 85%;
+            }
+
+            .content-51 {
+                display: flex;
+                flex-grow: 1;
+                justify-content: center;
+                /* 将子元素在容器中水平居中对齐 */
+                flex-wrap: wrap;
+            }
+
+            .text-51 {
+                flex-basis: 80%;
+            }
+
+            .button-51 {
+                /*“下载”按钮颜色*/
+                align-self: center;
+                justify-self: center;
+            }
+
+            .button-51 button {
+                /*“下载”按钮背景*/
+                background-color: #04A3FB97;
+            }
+
+            .rounded-51 {
+                /*“下载”二字*/
+                border-radius: 10px;
+            }
+        </style>
+
+
 
 
 
@@ -446,6 +509,7 @@
 
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <pre style="color:#FFFFFF;">    部分需要解压密码的文件请联系网页开发者获取解压密码</pre>
         <pre style="color:#FFFFFF;">
                                 网页版本：正式版v1.0</pre>
         <br>
