--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -275,7 +275,10 @@
             }
         </style>
 
-<img src="ProfliePhoto.jpg"><!--头像-->
+
+
+<!--头像-->
+<img src="ProfliePhoto.jpg">
 <style>
         img {
             position: fixed;
@@ -316,8 +319,119 @@ ERROR
     </style>
 
 
+<!--弹窗相关-->
+<style>
+    /* 遮罩层样式 */
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: none;
+    }
+
+    /* 弹窗框体样式 */
+.modal {
+  position: fixed;
+  top: 50%; /* 调整弹窗距离顶部的距离 */
+  left: 50%; /* 调整弹窗距离左侧的距离 */
+  transform: translate(-50%, -50%);
+  border-radius: 20px;
+  background-color: #fff;
+  padding: 20px;
+  width: 300px; /* 调整弹窗宽度 */
+  height: 200px; /* 调整弹窗高度 */
+  max-width: 100%;
+  max-height: 100%;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+  z-index: 999;
+  overflow: hidden;
+}
+
+    /* 弹窗标题样式 */
+    .modalTitle {
+      font-size: 18px;
+      font-weight: bold;
+      margin: 0 0 10px;
+      padding-bottom: 10px;
+      border-bottom: 1px solid #eee;
+    }
+
+    /* 弹窗内容样式 */
+    .modalContent {
+      font-size: 16px;
+      line-height: 1.5;
+      margin: 10px 0;
+    }
+
+    /* 弹窗底部样式 */
+.modalFooter {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  border-radius: 100px;
+}
+    /* 关闭按钮样式 */
+    .closeButton {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 24px;
+      cursor: pointer;
+      color: #999;
+    }
+.openModal
+{
+position: fixed;
+top: 181px;
+left: 292px;
+background: #FFFFFF00;
+border-radius: 10px;
+}
+<!--弹窗“确认”按钮圆角-->
+.modalFooter button {
+  border-radius: 10px;
+}
+
+  </style>
 
 
+
+  <button onclick="openModal()" class="openModal">关系网</button>
+
+  <!-- 遮罩层 -->
+  <div class="overlay" id="modalOverlay">
+    <!-- 弹窗框体 -->
+    <div class="modal" id="modalBox">
+      <!-- 关闭按钮 -->
+      <span class="closeButton" onclick="closeModal()">&times;</span>
+      <!-- 弹窗标题 -->
+      <h2 class="modalTitle">ERROR - 页面拦截</h2>
+      <!-- 弹窗内容 -->
+      <p class="modalContent">您访问该页面的权限。</p>
+      <!-- 弹窗底部 -->
+      <div class="modalFooter">
+        <button style="background-color: #167C5399; border-radius: 15px;" onclick="closeModal()">确认</button>
+      </div>
+        <!-- 权限足够自动跳转xxxxx -->
+    </div>
+  </div>
+
+  <script>
+function openModal() {
+  // 显示遮罩层和弹窗
+  document.getElementById('modalOverlay').style.display = 'block';
+  document.getElementById('modalBox').style.display = 'block';
+}
+
+function closeModal() {
+  // 隐藏遮罩层和弹窗
+  document.getElementById('modalOverlay').style.display = 'none';
+  document.getElementById('modalBox').style.display = 'none';
+}
+  </script>
 
 
 
