--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
         function loadChatGPT() {
             var myFrame = document.getElementById("myFrame");
-            myFrame.src = "https://chat.theb.ai/";
+            myFrame.src = "LostPage404/index.html";
             myFrame.style.width = "100%";
             myFrame.style.height = "800px";
             myFrame.style.top = "-10px";
