--- a/index.html
+++ b/index.html
@@ -306,18 +306,18 @@
             document.body.style.overflow = "hidden";// 阻止页面滚动
         }
 
-        function loadTools() {
+        function loadToolBox() {
             var myFrame = document.getElementById("myFrame");
-            myFrame.src = "https://baidu.com/";
+            myFrame.src = "ToolBox/index.html";
             myFrame.style.width = "100%";
             myFrame.style.height = "800px";
             myFrame.style.top = "-10px";
             document.body.style.overflow = "hidden";// 阻止页面滚动
         }
 
-        function loadToolBox() {
+        function loadTools() {
             var myFrame = document.getElementById("myFrame");
-            myFrame.src = "ToolBox/index.html";
+            myFrame.src = "LostPage404/index.html";
             myFrame.style.width = "100%";
             myFrame.style.height = "800px";
             myFrame.style.top = "-10px";
