--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HTXZNCCTQ3"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -243,8 +243,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <link rel="stylesheet" href="font.css">
-
-    
 </head>
 
 
@@ -264,7 +262,7 @@
     <div id="sidebar">
         <ul>
             <!--左侧导航栏-->
-            <button class="button-0" style="color: rgb(0,0,0);left">目录</button>
+            <button class="button-0" style="color: rgb(0,0,0);left">主目录</button>
             <button onclick="loadFirstPage()" class="button-firstpage">首页</button>
             <button onclick="loadHomePage()" class="button-homepage">主页</button>
             <button onclick="loadChatGPT()" class="button-chat">ChatGPT</button>
