--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-5MJ73ST');</script>
-<!-- End Google Tag Manager -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JN76DJKTDR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JN76DJKTDR');
+</script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error's Web</title>
     <style>
@@ -252,10 +254,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5MJ73ST"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
     <!-- 导航栏按钮 -->
     <div style="color:#FFFFFF;" id="navBtn">&#9776;</div>
     <!--这是右侧区域-->
@@ -264,7 +262,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div id="sidebar">
         <ul>
             <!--左侧导航栏-->
-            <button class="button-0" style="color: rgb(0,0,0);left">主目录</button>
+            <button class="button-0" style="color: rgb(0,0,0);left">目录</button>
             <button onclick="loadFirstPage()" class="button-firstpage">首页</button>
             <button onclick="loadHomePage()" class="button-homepage">主页</button>
             <button onclick="loadChatGPT()" class="button-chat">ChatGPT</button>
