--- a/FirstPage/index.html
+++ b/FirstPage/index.html
@@ -53,7 +53,7 @@
         function showPopup() {
             Swal.fire({
                 title: "入站须知",
-                html: "入站须知：请不要收藏任何本站网页，否则你只能待在那一个页面上→_→",
+                html: "入站须知：请不要收藏任何本站网页，否则你有一定概率只能待在那一个页面上→_→",
                 icon: "none",
                 confirmButtonText: "确定"
             });
