--- a/Guide.html
+++ b/Guide.html
@@ -271,11 +271,11 @@
   border: none;
 }
 </style>
-<iframe style="width: 100%; height: 800px;"src="FirstPage/Phone/index.html" id="myFrame"></iframe>
+<iframe style="width: 100%; height: 800px;"src="FirstPage/index.html" id="myFrame"></iframe>
 <script>
         function loadFirstPage() {
             var myFrame = document.getElementById("myFrame");
-            myFrame.src = "FirstPage/Phone/index.html";
+            myFrame.src = "FirstPage/index.html";
             myFrame.style.width = "100%";
             myFrame.style.height = "800px";
             document.body.style.overflow = "hidden";// 阻止页面滚动
